# learn

./: .gitattributes  .gitignore  README.md  clean.sh  cnf.json  deploy.sh  makefile.linux  np  setup.sh  template.cpp  test  tt.json
_scripts/: cmaked  dbgreset  gdbm  ocdg  pp0s  pp0u
ch1/e1/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch1/e1/src/: main.cpp
ch2/e1/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e1/src/: main.cpp
ch2/e2/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e2/src/: main.cpp
ch2/e3/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e3/src/: main.cpp
ch2/e4/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e4/src/: main.cpp  reference.cpp
ch2/e5/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e5/src/: main.cpp
ch2/e6/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e6/src/: main.cpp
ch2/e7/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e7/src/: main.cpp
ch2/e8/: build.linux.arm64  build.linux.x86_64  makefile.linux
ch2/e8/src/: main.cpp
src/: mkprj.sh
src/_template/: CMakeLists.txt  main.S
src/countingspeedtest/: CMakeLists.txt  main.S
src/helloworld/: CMakeLists.txt  main.S
src/helloworld_down/: CMakeLists.txt  main.S
src/numconversion1234/: CMakeLists.txt  main.S
src/twoscomp_8bit/: CMakeLists.txt  main.S  plan.txt
